--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,10 +7,10 @@ on:
   branches:
    - main
 jobs:
- hello-world:
-  name: output hello world
+ hello-tomato:
+  name: output hello tomato
   # CI上の仮装の環境が必要なので必須
   runs-on: ubuntu-latest
   steps:
-   - name: test hello world
-     run: echo hello world
+   - name: test hello tomato
+     run: echo hello tomato
