--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -19,3 +19,8 @@ jobs:
       channel: stable
       flutter-version: 3.24.5
   - run: flutter --version
+#   https://docs.github.com/ja/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
+  - name: Install dependencies
+    run: flutter pub get
+  - name: Run tests
+    run: flutter test
