--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -16,7 +16,7 @@ jobs:
   - name: Set up Flutter
     uses: subosito/flutter-action@v2
     with:
-      channel: stable
+      # channel: stable
       flutter-version: 3.24.5
   - run: flutter --version
 #   https://docs.github.com/ja/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
