--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,15 @@
-name: Check and test the source code
+name: CI Pipeline
+
 on:
- push:
-  branches:
-   - main
- pull_request:
-  branches:
-   - main
+  push:
+    branches:
+      - main
+
 jobs:
- hello-world:
-  name: output hello world
-  # CI上の仮装の環境が必要なので必須
-  # privateリポジトリにしてCIが通るかチェック
-  runs-on: ubuntu-latest
-  steps:
-   - name: test hello world
-     run: echo hello world
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Use secret key
+      env:
+        API_KEY: ${{ secrets.API_KEY }}
+      run: echo "Using API key ${{ env.API_KEY }}"
