--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,22 @@ on:
   push:
     branches:
       - main
-
+env:
+  API_KEY: ${{ secrets.API_KEY }}
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Use secret key
-      env:
-        API_KEY: ${{ secrets.API_KEY }}
       run: echo "Using API key ${{ env.API_KEY }}"
+    - name: Debug secret
+      env:
+        API_KEY: ${{ env.API_KEY }}
+      run: |
+        if [ -z "$API_KEY" ]; then
+          echo "Error: API_KEY is not set or is empty"
+          exit 1
+        else
+          echo "API_KEY is set (value is masked)"
+        fi
+    
