--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -23,6 +23,10 @@ jobs:
     run: flutter pub get
   - name: Run tests
     run: flutter test
-  - name: Build Android
-    run: flutter build apk --release
+  - name: check version
+    run: |
+      cd /usr/lib/jvm/
+      pwd
+  # - name: Build Android
+  #   run: flutter build apk --release
   
