--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -11,18 +11,18 @@ jobs:
 #   name: output hello world 
   runs-on: ubuntu-latest
   steps:
-  - name: Clone repository
-    uses: actions/checkout@v4
-  - name: Set up Flutter
-    uses: subosito/flutter-action@v2
-    with:
-      channel: stable
-      flutter-version: 3.24.5
-  - run: flutter --version
-  - name: Install dependencies
-    run: flutter pub get
-  - name: Run tests
-    run: flutter test
+  # - name: Clone repository
+  #   uses: actions/checkout@v4
+  # - name: Set up Flutter
+  #   uses: subosito/flutter-action@v2
+  #   with:
+  #     channel: stable
+  #     flutter-version: 3.24.5
+  # - run: flutter --version
+  # - name: Install dependencies
+  #   run: flutter pub get
+  # - name: Run tests
+  #   run: flutter test
   - name: check version
     run: |
       cd /usr/lib/jvm/
